--- a/index.html
+++ b/index.html
@@ -1,21 +1,90 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <!--Entete-->
     <head>
 		<title>Vêtements
 		</title>
-		<meta charset="utf-8"; name="vêtements, mode, habits"; content="">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<meta charset="utf-8"; name="vêtements, qualité, accessible"; content="">
+        <link rel="stylesheet" href="CSS/bootstrap.css">
+        <link rel="stylesheet" href="CSS/styleaccueil.css">
 	</head>
 <!--FIN Entete-->
 
     <body>
+<nav>
+  <div class="container d-flex flex-column flex-md-row justify-content-between">
+    <a class="py-2" href="#">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
+    </a>
+    <a class="py-2 d-none d-md-inline-block" href="#">Compte</a>
+    <a class="py-2 d-none d-md-inline-block" href="#">Panier</a>
+  </div>
+</nav>
+
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div style="width: 100%;min-height:600px;background:url('medias/vtements.jpg');background-size: 100%;">
+      <h1 class="display-4 font-weight-normal">Les beaux-jours arrivent !</h1>  
+      <p class="lead font-weight-normal">Découvrez les nouveaux arrivants de la collection printemps-été 2019. Pleins de looks chics et décontractés pour toutes les femmes sont disponibles dès maintenant chez Grossomodo</p>
+    <a class="btn btn-outline-secondary" href="#">Je fonce</a>
+    </div>
+     
+  <div class="product-device shadow-sm d-none d-md-block"></div>
+  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+</div>
+
+
+
+
+<div id="un" class=col-6">
+  <h2>Les chaussures ouvertes</h2>
+   <p>Laissez respirer vos pieds</p>
+</div>
+<div id="deux" class=col-6>
+      <h2>Les Jeans</h2>
+      <p>Les indétrônables aussi résistants qu'irrésitible</p> 
+</div>
+
+
+<div id="trois" class=col-6">
+  <h2>Les chaussures ouvertes</h2>
+   <p>Laissez respirer vos pieds</p>
+</div>
+<div id="quatre" class=col-6>
+      <h2>Les Jeans</h2>
+      <p>Les indétrônables aussi résistants qu'irrésitible</p> 
+</div>
+
+<div id="un" class=col-6">
+  <h2>Les chaussures ouvertes</h2>
+   <p>Laissez respirer vos pieds</p>
+</div>
+<div id="deux" class=col-6>
+      <h2>Les Jeans</h2>
+      <p>Les indétrônables aussi résistants qu'irrésitible</p> 
+</div>
+
+<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+    <div class="my-3 p-3">
+      <h2 class="display-5">Another headline</h2>
+      <p class="lead">And an even wittier subheading.</p>
+    </div>
+    <div class="bg-white shadow-sm mx-auto" style="width: 100%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+  </div>
+  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+    <div class="my-3 py-3">
+      <h2 class="display-5">Another headline</h2>
+      <p class="lead">And an even wittier subheading.</p>
+    </div>
+    <div class="bg-white shadow-sm mx-auto" style="width: 100%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+  </div>
+</div>
+    	
 
 
     </body>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html> 
